--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ a {
 
 textarea {
   width: 100%;
+  height: 500px;
+  line-height: 20px;
+  text-align:
   border-radius: 5px;
   box-shadow: none;
   border: 1px solid #ced6e0;
@@ -57,7 +60,7 @@ textarea {
 }
 
 textarea::placeholder {
-  font-family: Courier;
+  font-family: courier;
 }
 
 .btn {
